implémentation du bonus 'Contactez-nous'

--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -31,6 +31,10 @@
       <li><a href="{{ path('admin_produit_index') }}" class="hover:underline">Produits</a></li>
       <li><a href="{{ path('admin_commande_index') }}" class="hover:underline">Commandes</a></li>
       <li><a href="{{ path('app_home') }}" class="hover:underline">Site public</a></li>
+      <li><a href="{{ path('admin_messages') }}" class="hover:underline">
+       Messages
+      </a>
+      </li>
       <li><a href="{{ path('app_logout') }}" class="text-red hover:underline">Déconnexion</a></li>
     </ul>
   </nav>
